// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@idraw/board: src/lib/context Context 1`] = `
[
  {
    "props": {
      "height": 1800,
      "width": 2000,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
  {
    "props": {
      "height": 1800,
      "width": 2000,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 240,
      "width": 400,
      "x": 20,
      "y": 20,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 240,
      "width": 400,
      "x": 160,
      "y": 160,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 240,
      "width": 400,
      "x": 320,
      "y": 320,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 200,
      "width": 400,
      "x": 780,
      "y": 580,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.arc 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "anticlockwise": true,
            "endAngle": 6.283185307179586,
            "radius": 100,
            "startAngle": 0,
            "x": 140,
            "y": 160,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.arcTo 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "cpx1": 100,
            "cpx2": 200,
            "cpy1": 100,
            "cpy2": 200,
            "radius": 12.566370614359172,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arcTo",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.beginPath 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.clearRect 1`] = `
[
  {
    "props": {
      "height": 1800,
      "width": 2000,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.closePath 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "closePath",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.createPattern 1`] = `
[
  {
    "props": {
      "height": 600,
      "width": 600,
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.drawImage 1`] = `
[
  {
    "props": {
      "dHeight": 0,
      "dWidth": 0,
      "dx": 22,
      "dy": 24,
      "img": <img />,
      "sHeight": 0,
      "sWidth": 0,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
  {
    "props": {
      "dHeight": 104,
      "dWidth": 102,
      "dx": 22,
      "dy": 24,
      "img": <img />,
      "sHeight": 204,
      "sWidth": 202,
      "sx": 122,
      "sy": 124,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.fill 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.fillRect 1`] = `
[
  {
    "props": {
      "height": 200,
      "width": 160,
      "x": 20,
      "y": 40,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.fillText 1`] = `
[
  {
    "props": {
      "maxWidth": null,
      "text": "Hello world",
      "x": 100,
      "y": 200,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillText",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.lineTo 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "x": 20,
            "y": 40,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "lineTo",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.moveTo 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "x": 20,
            "y": 40,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "moveTo",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.rect 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "height": 400,
            "width": 200,
            "x": 20,
            "y": 40,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "rect",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.restore 1`] = `
[
  {
    "props": {
      "height": 200,
      "width": 200,
      "x": 20,
      "y": 20,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 200,
      "width": 200,
      "x": 300,
      "y": 150,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.rotate 1`] = `
[
  {
    "props": {
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "height": 400,
            "width": 200,
            "x": 20,
            "y": 40,
          },
          "transform": [
            0.8660254037844387,
            0.49999999999999994,
            -0.49999999999999994,
            0.8660254037844387,
            0,
            0,
          ],
          "type": "rect",
        },
      ],
    },
    "transform": [
      0.8660254037844387,
      0.49999999999999994,
      -0.49999999999999994,
      0.8660254037844387,
      0,
      0,
    ],
    "type": "stroke",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.save 1`] = `
[
  {
    "props": {
      "height": 200,
      "width": 200,
      "x": 20,
      "y": 20,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
  {
    "props": {
      "height": 200,
      "width": 200,
      "x": 300,
      "y": 150,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.scale 1`] = `
[
  {
    "props": {
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "height": 400,
            "width": 200,
            "x": 20,
            "y": 40,
          },
          "transform": [
            2,
            0,
            0,
            3,
            0,
            0,
          ],
          "type": "rect",
        },
      ],
    },
    "transform": [
      2,
      0,
      0,
      3,
      0,
      0,
    ],
    "type": "stroke",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.stroke 1`] = `
[
  {
    "props": {
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "height": 400,
            "width": 200,
            "x": 20,
            "y": 40,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "rect",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "stroke",
  },
]
`;

exports[`@idraw/board: src/lib/context Context.translate 1`] = `
[
  {
    "props": {
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "height": 400,
            "width": 200,
            "x": 20,
            "y": 40,
          },
          "transform": [
            1,
            0,
            0,
            1,
            100,
            120,
          ],
          "type": "rect",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      100,
      120,
    ],
    "type": "stroke",
  },
]
`;
